Bug 785057 - Return an error after js exceptions - r=bz

Work in progress. Return PL_DHASH_STOP if JS_SetProperty
fails, and check the return code of the enumerator to
propagate the failure back to javascript through the
return value of mozGetMetadata.